test/domains/bradc/oldExtraCurlies.good
oldExtraCurlies.chpl:3: error: Default Associative domains with idxType=domain(1,int(64),false) are not allowed
